Fixed code sample overflowing when viewed on mobile

--- a/guides/assets/stylesrc/_main.scss
+++ b/guides/assets/stylesrc/_main.scss
@@ -372,6 +372,12 @@ body.guide {
     word-wrap: break-word; /* Internet Explorer 5.5+ */
   }
 
+  pre {
+    code {
+      white-space: pre;
+    }
+  }
+
   // Back to Top element
 
   a.back-to-top {
